# kabin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md  TODO.md  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.app.json  vite.config.ts
.claude/skills/dev-scan/: .openskills.json
.github/workflows/: build.yml  release-please.yml
docs/: SCREENSHOTS.md  index.html  landing.css
src/: AGENTS.md  App.tsx  main.tsx
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  lib.rs  macos.rs  main.rs
src-tauri/src/commands/: AGENTS.md  attachments.rs  backup.rs  boards.rs  cards.rs  columns.rs  dashboard.rs  import.rs  mod.rs  projects.rs  search.rs  settings.rs  subtasks.rs  tags.rs  templates.rs  unified.rs
src-tauri/src/db/: AGENTS.md  backup.rs  connection.rs  migrations.rs  mod.rs
src-tauri/src/import/: kanri.rs  mod.rs  trello.rs  writer.rs
src-tauri/tests/: integration_test.rs
src/components/: AGENTS.md  theme-provider.tsx
src/hooks/: AGENTS.md  use-app-name.ts  use-attachments.ts  use-backup.ts  use-boards.ts  use-cards.ts  use-columns.ts  use-dashboard.ts  use-import.ts  use-keyboard.ts  use-projects.ts  use-subtasks.ts  use-tags.ts  use-templates.ts  use-unified.ts
src/lib/: AGENTS.md  color-utils.ts  constants.ts  i18n.ts  seed-data.ts  tauri.ts
src/locales/: AGENTS.md
src/stores/: AGENTS.md  app-store.ts
src/styles/: AGENTS.md  globals.css
src/types/: AGENTS.md
(+72 files in other folders)
