[package]
name = "kanban"
version = "0.1.8"
edition = "2021"

[lib]
name = "kanban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled", "vtab", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
